# nexus-decision-twin1

./: .bandit  .gitignore  .vercelignore  ARCHITECTURE.md  BUSINESS_CASE.md  CHANGELOG.md  COMPETITIVE_MOAT.md  DEMO_RUNBOOK.md  HACKATHON_RUBRIC.md  PRODUCT.md  README.md  RESPONSIBLE_AI.md  RETENTION.md  SECURITY.md  SECURITY_AUDIT.md  TRANSFORMATION_REPORT.md  index.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
backend/: anchor_handler.py  lambda_handler.py  requirements.txt  resolver_handler.py  run_demo.py  seal_live.py  verify_certificate.py
backend/api/: app.py  auth.py  config.py  logging_config.py  twin.py
backend/forward_ledger/: __init__.py  anchor.py  arena_seed.py  assumptions.py  calibration.py  counterfactual.py  dynamo_store.py  ensemble.py  enterprise.py  graph.py  knowledge.py  ledger.py  markets.py  memory.py  oracles.py  pipeline.py  providers.py  questions.py  reality_score.py  recalibrate.py  recommendation.py  resolver.py  seed.py  simulation.py  sql_store.py  store.py  trust.py  value.py
backend/tests/: test_api.py  test_calibration.py  test_decision_memory.py  test_dp_federation.py  test_dynamo_store.py  test_fuzz_regressions.py  test_hardening.py  test_incremental_verify.py  test_ledger.py  test_merkle_proof.py  test_multitenant_autonomous.py  test_observability.py  test_pipeline.py  (+11 more)
demo/: 90_SECOND_DEMO.md  JUDGE_SCRIPT.md  README.md
docs/: DIAGRAMS.md  PITCH.md
nexus-landing/: CHANGELOG_v10_engine.md  CHANGELOG_v11_record.md  CHANGELOG_v12_learning.md  CHANGELOG_v13_foresight.md  CHANGELOG_v14_arena.md  CHANGELOG_v15_genesis.md  CHANGELOG_v7_conservation.md  CHANGELOG_v8_mirror.md  CHANGELOG_v9_negotiation.md  INTEGRATION.md
(+21 files in other folders)
