[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-decision-twin"
version = "18.0.0"
description = "NEXUS — the Decision Twin platform for enterprise strategy teams."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "NEXUS" }]
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "httpx>=0.26,<0.29",
    "mangum>=0.17,<1.0",
    "segno>=1.6,<2.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34,<2.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "moto[dynamodb]>=5.0",
    "boto3>=1.34,<2.0",
]

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]
include = ["api*", "forward_ledger*"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]
exclude = ["nexus-landing", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008", "B007", "B905", "UP042"]  # E501: prose; B008: Depends(); B007/B905/UP042: stylistic

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["E402", "E702", "B007", "B011", "B905", "F841"]

[tool.mypy]
python_version = "3.11"
files = ["backend/forward_ledger", "backend/api"]
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
